# contract-review-coordinator

./: .env.example  Makefile  README.md  pyproject.toml
.prompts/: domain1-build-exercise.prompt.md
deliverables/: domain1-build-exercise.md
src/contract_review/: __init__.py  coordinator.py  demo.py  gate.py  harness.py  live.py  loop.py  normalizer.py  sample_contract.py  schemas.py  session.py  state.py  subagents.py
tests/: conftest.py  test_coordinator.py  test_demo.py  test_end_to_end.py  test_gate.py  test_harness.py  test_live.py  test_loop.py  test_normalizer.py  test_session.py  test_subagents.py
