[tool.poetry]
name = "contract-review-coordinator"
version = "0.1.0"
description = "CCA Domain 1 build exercise: a contract-review coordinator whose send_email gate blocks on real completion state, not the model's narration."
authors = ["Mark Alston"]
readme = "README.md"
packages = [{include = "contract_review", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
pydantic = ">=2.0"

[tool.poetry.group.live]
optional = true

[tool.poetry.group.live.dependencies]
anthropic = ">=0.42.0"
claude-agent-sdk = ">=0.2.0"
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.4"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
